--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="SreenCaptureVideoWPF.App"
+﻿<Application x:Class="ScreenCaptureVideoWPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SreenCaptureVideoWPF"
+             xmlns:local="clr-namespace:ScreenCaptureVideoWPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
