--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ScreenCaptureVideoWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+		Loaded="Window_Loaded">
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="400" />
@@ -13,9 +14,7 @@
 		<Grid x:Name="ControlsGrid" Grid.Column="0">
 			<Button x:Name="start_button" HorizontalAlignment="Left" VerticalAlignment="Top" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="StartCapture"  Click="StartCaptureButton_Click" />
 			<Button x:Name="stop_button" HorizontalAlignment="Left" VerticalAlignment="Bottom" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="StopCapture" Click="StopCaptureButton_Click" />
-			<Button x:Name="screenshot_button" HorizontalAlignment="Left" VerticalAlignment="Center" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="TakeScreenshot" />
-			<!--<Button x:Name="start_button" HorizontalAlignment="Left" VerticalAlignment="Top" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="StartCapture" Click="Button_ClickAsync"/>
-			<Button x:Name="stop_button" HorizontalAlignment="Left" VerticalAlignment="Center" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="TakeScreenshot" Click="ScreenshotButton_ClickAsync"/>-->
+			<!--<Button x:Name="screenshot_button" HorizontalAlignment="Left" VerticalAlignment="Center" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="TakeScreenshot" />-->
 		</Grid>
 	</Grid>
 </Window>
