Implement screenshot, fixed start stop recording, cleaned code - Screenshot is working - Start and Stop recording button can be clicked multiple times to create multiple recordings - Explicit declaration of all variables

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,9 +12,9 @@
 			<ColumnDefinition Width="400" />
 		</Grid.ColumnDefinitions>
 		<Grid x:Name="ControlsGrid" Grid.Column="0">
-			<Button x:Name="start_button" HorizontalAlignment="Left" VerticalAlignment="Top" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="StartCapture"  Click="StartCaptureButton_Click" />
+			<Button x:Name="start_button" HorizontalAlignment="Left" VerticalAlignment="Top" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="StartCapture"  Click="StartCaptureButton_ClickAsync" />
 			<Button x:Name="stop_button" HorizontalAlignment="Left" VerticalAlignment="Bottom" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="StopCapture" Click="StopCaptureButton_Click" />
-			<!--<Button x:Name="screenshot_button" HorizontalAlignment="Left" VerticalAlignment="Center" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="TakeScreenshot" />-->
+			<Button x:Name="screenshot_button" HorizontalAlignment="Left" VerticalAlignment="Center" Background="DarkGray" Margin="5" Padding="5" FontSize="12" Content="TakeScreenshot" Click="TakeScreenshotButton_Click" />
 		</Grid>
 	</Grid>
 </Window>
